# test_interview

./: .flake8  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  beasts.csv  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/task1/: solution.py
src/task2/: solution.py
tests/: conftest.py
tests/fixtures/task2/: mock_data.py
tests/units/task1/: test_mock_two_sum.py
tests/units/task2/: test_is_beasts.py  test_mock_fetch_anima_scr.py
