[tool.poetry]
name = "test-interview"
version = "0.1.0"
description = ""
authors = ["Dr1DeX"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
pytest = "^8.3.3"
playwright = "^1.48.0"
httpx = "^0.27.2"
anyio = "^4.6.2.post1"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
